AC_INIT(cantera,29)
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_MAKE_SET

PKG_CHECK_MODULES([PACKAGES], [freetype2 >= 9.20 fontconfig >= 2.8.0 dbus-1 >= 1 libpng >= 1.2])

AC_CHECK_LIB([gif], [DGifOpen], [], [AC_MSG_ERROR([libgif is required (apt-get install libgif-dev)])])
AC_CHECK_LIB([jpeg], [jpeg_read_header], [], [AC_MSG_ERROR([libjpeg is required (apt-get install libjpeg62-dev)])])
AC_CHECK_LIB([Xpm], [XpmReadFileToImage], [], [AC_MSG_ERROR([libxpm is required (apt-get install libxpm-dev)])])

AC_CHECK_HEADER([X11/extensions/Xdamage.h], [], [AC_MSG_ERROR([libxdamage required (apt-get install libxdamage-dev)])])
AC_CHECK_HEADER([X11/extensions/Xrender.h], [], [AC_MSG_ERROR([libxrender required (apt-get install libxrender-dev)])])
AC_CHECK_HEADER([X11/extensions/Xinerama.h], [], [AC_MSG_ERROR([libxinerama required (apt-get install libxinerama-dev)])])

AC_SUBST(PACKAGES_CFLAGS)
AC_SUBST(PACKAGES_LIBS)

AC_C_BIGENDIAN

AC_OUTPUT(Makefile)
